[WARP-SPEED] warp java demoter sync (instead of native)
(cherry picked from commit 7d691f36acb80b47c2c359740cb7e7b0fcbe7eb5)