@@ -21,102 +21,98 @@ import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import io.airlift.log.Logger;
 import io.trino.plugin.warp.config.WarmupDemoterConfig;
-import io.trino.plugin.warp.dispatcher.warmup.WarmupProperties;
 import io.trino.plugin.warp.dispatcher.warmup.demoter.events.WarmupDemoterFinishEvent;
-import io.trino.plugin.warp.expression.TransformFunction;
 import io.trino.plugin.warp.gen.constants.DemoteStatus;
-import io.trino.plugin.warp.gen.constants.WarmUpType;
 import io.trino.plugin.warp.gen.stats.WarmupDemoterStats;
 import io.trino.plugin.warp.metrics.MetricsManager;
 import io.trino.plugin.warp.storage.capacity.WorkerCapacityManager;
-import io.trino.plugin.warp.storage.engine.ConnectorSync;
-import io.trino.plugin.warp.storage.flows.FlowIdGenerator;
-import io.trino.plugin.warp.storage.flows.FlowType;
 import io.trino.plugin.warp.storage.flows.FlowsSequencer;
-import io.trino.plugin.warp.tools.CatalogNameProvider;
-import io.trino.plugin.warp.tools.util.StopWatch;
+import io.trino.spi.NodeManager;
 import io.trino.spi.TrinoException;
+import io.trino.spi.catalog.CatalogName;
+import jakarta.annotation.PreDestroy;
 import org.apache.commons.collections4.CollectionUtils;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.concurrent.ExecutionException;
-import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
-import static io.trino.plugin.warp.dispatcher.warmup.WarmupProperties.NO_EXPIRY;
-import static io.trino.plugin.warp.storage.flows.FlowIdGenerator.INVALID_FLOW_ID;
 import static java.util.Objects.requireNonNull;
 
-@SuppressWarnings("ALL")
 @Singleton
 public class WarmupDemoterService
 {
     public static final String WARMUP_DEMOTER_STAT_GROUP = "warmupDemoter";
     public static final int MAX_SUPPORTED_BATCH_SIZE = 100;
-    public static final int FAILED_DEMOTE_SQUENCE = -1;
     private static final Logger logger = Logger.get(WarmupDemoterService.class);
+
     private final WorkerCapacityManager workerCapacityManager;
-    private final ConnectorSync connectorSync;
     private final WarmupDemoterConfig warmupDemoterConfig;
     private final WarmupDemoterStats globalStatsDemoter;
+    private final DemoterSync demoterSync;
+    private final CatalogName catalogName;
+    private final EventBus eventBus;
     private final WarpDeleteService warpDeleteService;
-    private final FlowsSequencer flowsSequencer;
-    private WarmupProperties defaultWarmupProperties;
-    private AtomicDouble highestPriority = new AtomicDouble(0);
-    private AtomicBoolean isExecuting = new AtomicBoolean(false);
+
+    private final long demoteKey;
+
+    private final AtomicReference<DemoteContext> demoteContext = new AtomicReference<>();
+    private final AtomicDouble highestPriorityDemoted = new AtomicDouble(0D);
     private long lastExecutionTime = -1;
-    private CatalogNameProvider catalogNameProvider;
     private List<TupleFilter> tupleFilters;
     private boolean forceDeleteDeadObjects;
     private boolean forceDeleteFailedObjects;
-    private boolean resetHigestPriority;
+    private boolean resetHighestPriority;
     private boolean deleteEmptyRowGroups;
     private boolean enableDemote;
-    private EventBus eventBus;
-    private DemoteContext demoteContext;
 
     @Inject
     public WarmupDemoterService(WorkerCapacityManager workerCapacityManager,
-                                WarmupDemoterConfig warmupDemoterConfig,
-                                MetricsManager metricsManager,
-                                FlowsSequencer flowsSequencer,
-                                ConnectorSync connectorSync,
-                                CatalogNameProvider catalogNameProvider,
-                                EventBus eventBus,
-                                WarpDeleteService warpDeleteService)
+            WarmupDemoterConfig warmupDemoterConfig,
+            MetricsManager metricsManager,
+            DemoterSync demoterSync,
+            CatalogName catalogName,
+            EventBus eventBus,
+            WarpDeleteService warpDeleteService,
+            NodeManager nodeManager,
+            FlowsSequencer flowsSequencer)
     {
         this.workerCapacityManager = requireNonNull(workerCapacityManager);
         this.warmupDemoterConfig = requireNonNull(warmupDemoterConfig);
-        this.globalStatsDemoter = (WarmupDemoterStats) metricsManager.registerMetric(WarmupDemoterStats.create(WARMUP_DEMOTER_STAT_GROUP));
-        this.flowsSequencer = requireNonNull(flowsSequencer);
-        this.connectorSync = requireNonNull(connectorSync);
-        this.catalogNameProvider = requireNonNull(catalogNameProvider);
+        this.globalStatsDemoter = metricsManager.registerMetric(WarmupDemoterStats.create(WARMUP_DEMOTER_STAT_GROUP));
+        this.demoterSync = requireNonNull(demoterSync);
+        this.catalogName = requireNonNull(catalogName);
         this.eventBus = requireNonNull(eventBus);
-        this.defaultWarmupProperties = new WarmupProperties(WarmUpType.WARM_UP_TYPE_DATA, warmupDemoterConfig.getDefaultRulePriority(), NO_EXPIRY, TransformFunction.NONE);
-        this.enableDemote = warmupDemoterConfig.isEnableDemote();
         this.warpDeleteService = requireNonNull(warpDeleteService);
-        init();
+
+        demoteKey = demoterSync.registerCatalog(
+                this,
+                flowsSequencer,
+                catalogName,
+                nodeManager);
+
+        enableDemote = warmupDemoterConfig.isEnableDemote();
     }
 
-    private void init()
+    @PreDestroy
+    public void shutdown()
     {
-        logger.debug("WarmupDemoterService init = %d", System.identityHashCode(connectorSync));
-        connectorSync.init(this);
+        demoterSync.unregisterCatalog(demoteKey);
     }
 
     //called from warmup - async
-    public int tryDemoteStart()
+    public boolean tryDemoteStart()
     {
         return tryDemoteStart(null);
     }
 
-    public int tryDemoteStart(List<TupleFilter> tupleFilters)
+    public boolean tryDemoteStart(List<TupleFilter> tupleFilters)
     {
         if (!enableDemote) {
-            return FAILED_DEMOTE_SQUENCE;
+            return false;
         }
 
         if (this.tupleFilters == null) {
@@ -127,72 +123,74 @@ public class WarmupDemoterService
                     .collect(Collectors.toList());
         }
 
-        int demoteSequence;
+        boolean isStarted = false;
         try {
             validateInput();
-            demoteSequence = initiateDemoteProcess();
+            isStarted = initiateDemoteProcess();
         }
         catch (Exception e) {
             logger.error(e);
             globalStatsDemoter.incnumber_of_runs_fail();
-            demoteSequence = FAILED_DEMOTE_SQUENCE;
         }
 
-        return demoteSequence;
+        if (!isStarted) {
+            demoteContext.set(null);
+        }
+        return isStarted;
     }
 
-    int initiateDemoteProcess()
+    boolean initiateDemoteProcess()
     {
         globalStatsDemoter.incnumber_of_calls();
-        if (isExecuting.get() || demoteContext != null) {
-            logger.debug("%s: is already executing (isExecuting = %b, demoteContext = %s)", catalogNameProvider.get(), isExecuting.get(), demoteContext);
+        if (demoteContext.get() != null) {
+            logger.debug("%s: is already executing (demoteContext = %s)", catalogName, demoteContext);
             globalStatsDemoter.incnot_executed_due_is_already_executing();
-            return FAILED_DEMOTE_SQUENCE;
+            return false;
         }
 
         if (CollectionUtils.isEmpty(tupleFilters)
                 && !forceDeleteDeadObjects
                 && !forceDeleteFailedObjects
                 && !reachedThreshold(warmupDemoterConfig.getMaxUsageThresholdPercentage())) {
-            logger.debug("%s: not executing due thresholds", catalogNameProvider.get());
+            logger.debug("%s: not executing due thresholds", catalogName);
             globalStatsDemoter.incnot_executed_due_threshold();
-            return FAILED_DEMOTE_SQUENCE;
+            return false;
         }
 
-        logger.debug("%s: call start demote", catalogNameProvider.get());
-        int demoterSequence = connectorSync.syncDemotePrepare(warmupDemoterConfig.getEpsilon());
-        if (demoterSequence == FAILED_DEMOTE_SQUENCE) {
-            logger.warn("%s: active demoter was initiated by another connector", catalogNameProvider.get());
+        logger.debug("%s: call start demote", catalogName);
+
+        if (!demoterSync.tryStartDemoteProcess(demoteKey)) {
+            logger.warn("%s: active demoter was initiated by another connector", catalogName);
             globalStatsDemoter.incnot_executed_due_sync_demote_start_rejected();
-            isExecuting.set(false);
-            return FAILED_DEMOTE_SQUENCE;
+            return false;
         }
-        logger.debug("%s: call syncDemoteStart startDemote with seqId = %d", catalogNameProvider.get(), demoterSequence);
-        connectorSync.startDemote(demoterSequence);
-        return demoterSequence;
+        logger.debug("%s: call syncDemoteStart startDemote", catalogName);
+        return true;
     }
 
-    public void connectorSyncStartDemote(int demoterSequence)
+    void connectorSyncStartDemote()
     {
-        logger.debug("%s: startDemote(demoterSequence = %d)", catalogNameProvider.get(), demoterSequence);
+        logger.debug("%s: startDemote", catalogName);
         try {
-            if (demoteContext != null && demoteContext.getDemoterSequence() != demoterSequence) {
-                logger.debug("%s: abortActiveDemote(demoteContext.demoterSequence = %d)", catalogNameProvider.get(), demoteContext.getDemoterSequence());
+            if (demoteContext.get() != null) {
+                logger.debug("%s: abortActiveDemote", catalogName);
                 abortActiveDemote();
             }
             workerCapacityManager.updateCurrentUsage();
 
-            initDemoteContext(demoterSequence);
+            initDemoteContext();
 
-            executeDemote(demoterSequence);
-            highestPriority.set(0);
-            logger.debug("%s: call demoteCycleEnd, demoterSequence = %d", catalogNameProvider.get(), demoteContext.getDemoterSequence());
+            demoteContext.get().getStatsWarmupDemoter().incnumber_of_runs();
+
+            executeDemote();
+            resetHighestPriority();
+            logger.debug("%s: call demoteCycleEnd", catalogName);
 
             demoteCycleEnd();
         }
         catch (Exception e) {
             if (e instanceof TrinoException) {
-                logger.error("%s: startDemoteCycle failed with error: %s", catalogNameProvider.get(), ((TrinoException) e).getErrorCode().getName());
+                logger.error("%s: startDemoteCycle failed with error: %s", catalogName, ((TrinoException) e).getErrorCode().getName());
             }
             else {
                 logger.error(e);
@@ -203,140 +201,142 @@ public class WarmupDemoterService
 
     void cancelDemoteExecution()
     {
-        logger.error("failed to execute demote, call native to cancel demote with sequenceId = %d", demoteContext.getDemoterSequence());
-        connectorSync.syncDemoteEnd(demoteContext.getDemoterSequence(),
-                                    demoteContext.getLowestPriority(),
-                                    highestPriority.get(),
-                                    DemoteStatus.DEMOTE_STATUS_REACHED_THRESHOLD);
+        logger.error("catalog[%s]: failed to execute demote, call native to cancel demote", catalogName);
+        demoterSync.finishDemoteProcess(
+                demoteKey,
+                demoteContext.get().getLowestPriority(),
+                highestPriorityDemoted.get(),
+                DemoteStatus.DEMOTE_STATUS_REACHED_THRESHOLD);
         globalStatsDemoter.incnumber_of_runs_fail();
     }
 
-    public void connectorSyncDemoteEnd(int demoteSequence, double highestPriority)
+    void connectorSyncDemoteEnd(double highestPriorityDemoted, boolean isFireEvent)
     {
-        logger.debug("%s: demoteEnd(demoteSequence = %d, highestPriority = %f)", catalogNameProvider.get(), demoteSequence, highestPriority);
-        this.highestPriority.set(resetHigestPriority ? 0 : highestPriority);
-        if (isExecuting()) {
-            globalStatsDemoter.incnumber_of_runs();
-            demoteContext.getStopWatch().stop();
-            deleteEmptyRowGroups = false;
-            isExecuting.set(false);
-            flowsSequencer.flowFinished(FlowType.WARMUP_DEMOTER, demoteContext.getFlowId(), true);
+        logger.debug("catalog[%s]: connectorSyncDemoteEnd(highestPriorityDemoted = %f)",
+                catalogName, highestPriorityDemoted);
+        this.highestPriorityDemoted.set(resetHighestPriority ? 0 : highestPriorityDemoted);
+
+        if (isFireEvent) {
             fireEventDemoteEnd(true);
-            demoteContext = null;
+        }
+
+        if (demoteContext.get() != null) {
+            deleteEmptyRowGroups = false;
+            demoteContext.set(null);
+            logger.debug("catalog[%s]: connectorSyncDemoteEnd(demoteContext = null)", catalogName);
         }
         else {
-            logger.error("demote end was called by another procces (demoteSequence = %d), or demote was canceled", demoteSequence);
+            logger.error("catalog[%s]: connectorSyncDemoteEnd was called by another process, or demote was canceled",
+                    catalogName);
         }
     }
 
     private void fireEventDemoteEnd(boolean success)
     {
-        logger.debug("fire event demote end");
+        logger.debug("catalog[%s]: fire event demote end success[%s]", catalogName, success);
 
-        if (demoteContext != null) {
-            globalStatsDemoter.mergeStats(demoteContext.getStatsWarmupDemoter());
-            globalStatsDemoter.addnumber_of_cycles(demoteContext.getNumberOfCycles());
-            WarmupDemoterFinishEvent event = new WarmupDemoterFinishEvent(demoteContext.getDemoterSequence(), success, demoteContext.getStatsWarmupDemoter().statsCounterMapper());
+        if (demoteContext.get() != null) {
+            globalStatsDemoter.mergeStats(demoteContext.get().getStatsWarmupDemoter());
+
+            WarmupDemoterFinishEvent event = new WarmupDemoterFinishEvent(
+                    success,
+                    demoteContext.get().getStatsWarmupDemoter().statsCounterMapper());
+            logger.debug("catalog[%s]: fire event demote %s", catalogName, event);
             eventBus.post(event);
         }
     }
 
-    private void executeDemote(int demoterSequence)
+    private void executeDemote()
             throws ExecutionException, InterruptedException
     {
-        logger.debug("execute demote - demoteSequence = %d", demoterSequence);
+        logger.debug("catalog[%s]: execute demote", catalogName);
 
-        try {
-            demoteContext.setFlowId(FlowIdGenerator.generateFlowId());
-            StopWatch stopWatch = new StopWatch();
-            stopWatch.start();
-            flowsSequencer.tryRunningFlow(FlowType.WARMUP_DEMOTER, demoteContext.getFlowId(), Optional.empty()).get();
-            stopWatch.stop();
-            globalStatsDemoter.addwaiting_for_lock_nano(stopWatch.getNanoTime());
-            logger.debug("got key, start demote nano sec waited = %d", stopWatch.getNanoTime());
-        }
-        catch (Exception e) {
-            demoteContext.setFlowId(INVALID_FLOW_ID);
-            isExecuting.set(false);
-            return;
-        }
-
-        logger.debug("%s: build tupleRank", catalogNameProvider.get());
         TupleRankResult tupleRankResult = warpDeleteService.buildTupleRank(tupleFilters, forceDeleteFailedObjects);
-        demoteContext.setTupleRankList(tupleRankResult.tupleRankList());
+        demoteContext.get().setTupleRankList(tupleRankResult.tupleRankList());
         if (forceDeleteFailedObjects) {
             // In case of forceDeleteFailedObjects = false, failed objects will be deleted regulary (as dead objects \ low priority)
-            logger.debug("%s: deleteFailedObjects = %d", catalogNameProvider.get(), tupleRankResult.failedObjects().size());
+            logger.debug("catalog[%s]: deleteFailedObjects = %d", catalogName, tupleRankResult.failedObjects().size());
             deleteFailedObjects(tupleRankResult.failedObjects());
         }
-        logger.debug("%s: deleteImmediateObjects = %d", catalogNameProvider.get(), tupleRankResult.immediateObjects().size());
+        logger.debug("catalog[%s]: deleteImmediateObjects = %d", catalogName, tupleRankResult.immediateObjects().size());
         deleteImmediateObjects(tupleRankResult.immediateObjects());
-        sortTupleRankCollection(demoteContext.getTupleRankList());
+        sortTupleRankCollection(demoteContext.get().getTupleRankList());
         tupleFilters = null;
     }
 
-    void initDemoteContext(int demoterSequence)
+    @VisibleForTesting
+    void initDemoteContext()
     {
-        isExecuting.set(true);
         lastExecutionTime = System.currentTimeMillis();
         int batchSize = Math.min(MAX_SUPPORTED_BATCH_SIZE, warmupDemoterConfig.getBatchSize());
-        demoteContext = new DemoteContext(demoterSequence,
-                                          warmupDemoterConfig.getMaxUsageThresholdPercentage(),
-                                          warmupDemoterConfig.getCleanupUsageThresholdPercentage(),
-                                          batchSize,
-                                          warmupDemoterConfig.getMaxElementsToDemoteInIteration(),
-                                          warmupDemoterConfig.getEpsilon(),
-                                          deleteEmptyRowGroups);
-        logger.debug("%s: initDemoteContext: %s", catalogNameProvider.get(), demoteContext);
+        demoteContext.set(new DemoteContext(
+                warmupDemoterConfig.getMaxUsageThresholdPercentage(),
+                warmupDemoterConfig.getCleanupUsageThresholdPercentage(),
+                batchSize,
+                warmupDemoterConfig.getMaxElementsToDemoteInIteration(),
+                warmupDemoterConfig.getEpsilon(),
+                deleteEmptyRowGroups));
+        logger.debug("catalog[%s]: initDemoteContext: %s", catalogName, demoteContext);
     }
 
     private void demoteCycleEnd()
     {
+        logger.debug("demoteCycleEnd::start catalog[%s]", catalogName);
+
         DemoteStatus demoteStatus;
-        if (demoteContext.getTupleRankList().isEmpty()) {
-            this.highestPriority.set(0);
+        if (demoteContext.get().getTupleRankList().isEmpty()) {
+            resetHighestPriority();
             demoteStatus = DemoteStatus.DEMOTE_STATUS_NO_ELEMENTS_TO_DEMOTE;
             if (CollectionUtils.isEmpty(tupleFilters)) {
                 resetHighestPriority();
             }
         }
-        else if (reachedThreshold(demoteContext.getCleanupUsageThresholdPercentage())) {
+        else if (reachedThreshold(demoteContext.get().getCleanupUsageThresholdPercentage())) {
             demoteStatus = DemoteStatus.DEMOTE_STATUS_NOT_COMPLETED;
         }
         else {
             demoteStatus = DemoteStatus.DEMOTE_STATUS_REACHED_THRESHOLD;
         }
-        logger.debug("%s: demoteCycleEnd: call connectorSync.syncDemoteCycleEnd (demoteSequence = %d, lowestPriority = %f, highestPriority = %f, demoteStatus = %s)",
-                     catalogNameProvider.get(), demoteContext.getDemoterSequence(), demoteContext.getLowestPriority(), highestPriority.get(), demoteStatus.name());
-        connectorSync.syncDemoteEnd(demoteContext.getDemoterSequence(), demoteContext.getLowestPriority(), highestPriority.get(), demoteStatus);
+
+        logger.debug("demoteCycleEnd::finish catalog[%s]: demoteCycleEnd: call demoterSync.syncDemoteCycleEnd (lowestPriorityExist = %f, highestPriorityDemoted = %f, demoteStatus = %s)",
+                catalogName, demoteContext.get().getLowestPriority(), highestPriorityDemoted.get(), demoteStatus.name());
+
+        demoterSync.finishDemoteProcess(
+                demoteKey,
+                demoteContext.get().getLowestPriority(),
+                highestPriorityDemoted.get(),
+                demoteStatus);
     }
 
     void abortActiveDemote()
     {
-        logger.error("demote was aborted, demoteContext = %s", demoteContext);
+        logger.error("catalog[%s]: demote was aborted, demoteContext = %s", catalogName, demoteContext);
         deleteEmptyRowGroups = false;
-        isExecuting.set(false);
-        demoteContext = null;
         globalStatsDemoter.incnumber_of_runs_fail();
         fireEventDemoteEnd(false);
+        demoteContext.set(null);
     }
 
-    public void connectorSyncStartDemoteCycle(double maxPriorityToDemote, boolean isSingleConnector)
+    void connectorSyncStartDemoteCycle(double maxPriorityToDemote, boolean isSingleConnector)
     {
-        logger.debug("%s: startDemoteCycle (maxPriorityToDemote = %f, isSingleConnector = %b) tupleRankList.size %d",
-                     catalogNameProvider.get(), maxPriorityToDemote, isSingleConnector, demoteContext.getTupleRankList().size());
+        logger.debug("catalog[%s]: startDemoteCycle (maxPriorityToDemote = %f, isSingleConnector = %b) tupleRankList.size %d",
+                catalogName, maxPriorityToDemote, isSingleConnector, demoteContext.get().getTupleRankList().size());
         try {
             maxPriorityToDemote = isSingleConnector ? Integer.MAX_VALUE : maxPriorityToDemote;
-            demoteContext.increaseNumberOfCycles();
+
             if (!hasElementsToDemote(maxPriorityToDemote)) {
-                logger.error("should not call demote to this connector");
+                logger.error("should not call demote to on catalog[%s] -> tupleRankList[%s], lowestPriority[%s], maxPriorityToDemote[%s]",
+                        catalogName,
+                        demoteContext.get().getTupleRankList().isEmpty(),
+                        demoteContext.get().getLowestPriority(),
+                        maxPriorityToDemote);
             }
             boolean reachedThreshold = demoteCycle(maxPriorityToDemote, isSingleConnector);
             DemoteStatus demoteStatus;
             if (reachedThreshold) {
                 demoteStatus = DemoteStatus.DEMOTE_STATUS_REACHED_THRESHOLD;
             }
-            else if (demoteContext.getTupleRankList().isEmpty()) {
+            else if (demoteContext.get().getTupleRankList().isEmpty()) {
                 demoteStatus = DemoteStatus.DEMOTE_STATUS_NO_ELEMENTS_TO_DEMOTE;
                 if (CollectionUtils.isEmpty(tupleFilters)) {
                     resetHighestPriority();
@@ -345,12 +345,14 @@ public class WarmupDemoterService
             else {
                 demoteStatus = DemoteStatus.DEMOTE_STATUS_NOT_COMPLETED;
             }
-            double lowestPriority = demoteContext.getLowestPriority();
-            connectorSync.syncDemoteEnd(demoteContext.getDemoterSequence(), lowestPriority, highestPriority.get(), demoteStatus);
+            double lowestPriority = demoteContext.get().getLowestPriority();
+            demoterSync.finishDemoteProcess(demoteKey, lowestPriority, highestPriorityDemoted.get(), demoteStatus);
         }
         catch (Exception e) {
             if (e instanceof TrinoException) {
-                logger.error("%s: startDemoteCycle failed with error: %s", catalogNameProvider.get(), ((TrinoException) e).getErrorCode().getName());
+                logger.error(e,
+                        "catalog[%s]: startDemoteCycle failed with error: %s",
+                        catalogName, ((TrinoException) e).getErrorCode().getName());
             }
             else {
                 logger.error(e);
@@ -364,83 +366,72 @@ public class WarmupDemoterService
     {
         long elementsDeleted = 0;
         boolean reachedThreshold = false;
-        logger.debug("%s: demoteCycle: start demoteCycle", catalogNameProvider.get());
+        logger.debug("catalog[%s]: demoteCycle: start demoteCycle", catalogName);
         while (shouldContinueDemote(reachedThreshold, isSingleConnector, elementsDeleted, maxPriorityToDemote)) {
-            if (reachedThreshold(demoteContext.getCleanupUsageThresholdPercentage())) {
-                long maxElemntsToDemote = isSingleConnector ? Integer.MAX_VALUE : demoteContext.getMaxElementsToDemote();
-                long numberOfElementsToDemote = Math.min(maxElemntsToDemote - elementsDeleted, demoteContext.getBatchSize());
+            if (reachedThreshold(demoteContext.get().getCleanupUsageThresholdPercentage())) {
+                long maxElementsToDemote = isSingleConnector ? Integer.MAX_VALUE : demoteContext.get().getMaxElementsToDemote();
+                long numberOfElementsToDemote = Math.min(maxElementsToDemote - elementsDeleted, demoteContext.get().getBatchSize());
                 long newElementsDeleted = deleteByTupleRank(numberOfElementsToDemote, maxPriorityToDemote);
                 elementsDeleted += newElementsDeleted;
             }
             else {
                 reachedThreshold = true;
-                logger.warn("%s: demoteCycle: while loop: reached threshold", catalogNameProvider.get());
+                logger.warn("catalog[%s]: demoteCycle: while loop: reached threshold", catalogName);
             }
         }
-        logger.debug("%s: demoteCycle: tupleRankListSize = %d, elementsDeleted = %d, maxElementsToDemote = %d, maxPriorityToDemote = %f, lowestPriorityLeft = %f",
-                     catalogNameProvider.get(), demoteContext.getTupleRankList().size(), elementsDeleted, demoteContext.getMaxElementsToDemote(), maxPriorityToDemote, demoteContext.getLowestPriority());
+        logger.debug("catalog[%s]: demoteCycle: tupleRankListSize = %d, elementsDeleted = %d, maxElementsToDemote = %d, maxPriorityToDemote = %f, lowestPriorityLeft = %f",
+                catalogName, demoteContext.get().getTupleRankList().size(), elementsDeleted, demoteContext.get().getMaxElementsToDemote(),
+                maxPriorityToDemote, demoteContext.get().getLowestPriority());
+
         return reachedThreshold;
     }
 
     private boolean shouldContinueDemote(boolean reachedThreshold, boolean isSingleConnector, long elementsDeleted, double maxPriorityToDemote)
     {
-        if (reachedThreshold || demoteContext.getTupleRankList().isEmpty()) {
+        if (reachedThreshold || demoteContext.get().getTupleRankList().isEmpty()) {
             return false;
         }
         if (isSingleConnector) {
             return true;
         }
-        if (elementsDeleted < demoteContext.getMaxElementsToDemote() &&
-                demoteContext.getTupleRankList().get(0).warmupProperties().priority() < maxPriorityToDemote) {
-            return true;
-        }
-        return false;
+        return elementsDeleted < demoteContext.get().getMaxElementsToDemote() &&
+                demoteContext.get().getTupleRankList().getFirst().warmupProperties().priority() < maxPriorityToDemote;
     }
 
     private void validateInput()
     {
         if (warmupDemoterConfig.getBatchSize() < 1) {
-            throw new IllegalArgumentException("batchSize must be greater than 0");
+            throw new IllegalArgumentException("batchSize must be greater than 0 - " + warmupDemoterConfig.getBatchSize());
         }
         if (warmupDemoterConfig.getEpsilon() <= 0) {
-            throw new IllegalArgumentException("epsilon must be greater than 0");
+            throw new IllegalArgumentException("epsilon must be greater than 0 - " + warmupDemoterConfig.getEpsilon());
         }
         if (warmupDemoterConfig.getMaxElementsToDemoteInIteration() < 1) {
-            throw new IllegalArgumentException("maxElementsToDemote must be greater than 0");
+            throw new IllegalArgumentException("maxElementsToDemote must be greater than 0 - " + warmupDemoterConfig.getMaxElementsToDemoteInIteration());
         }
     }
 
     private boolean hasElementsToDemote(double priority)
     {
-        return !demoteContext.getTupleRankList().isEmpty() && demoteContext.getLowestPriority() < priority;
+        return !demoteContext.get().getTupleRankList().isEmpty() && demoteContext.get().getLowestPriority() < priority;
     }
 
-    private boolean reachedThreshold(double usageThresholdPercenatge)
+    private boolean reachedThreshold(double usageThresholdPercentage)
     {
-        return workerCapacityManager.getFractionCurrentUsageFromTotal() > parseFromPercentageToFraction(usageThresholdPercenatge);
-    }
-
-    private double parseFromPercentageToFraction(double percentage)
-    {
-        return percentage / 100;
-    }
-
-    public boolean canAllowDefaultWarmup()
-    {
-        return canAllowWarmup(defaultWarmupProperties.priority());
+        return workerCapacityManager.getFractionCurrentUsageFromTotal() > usageThresholdPercentage / 100;
     }
 
     public boolean canAllowWarmup(double priority)
     {
-        return priority >= (highestPriority.get() - warmupDemoterConfig.getWarmingPriorityAllowThreshold());
+        return priority >= (highestPriorityDemoted.get() - warmupDemoterConfig.getWarmingPriorityAllowThreshold());
     }
 
-    public boolean canAllowWarmup()
+    boolean canAllowWarmup()
     {
         return !reachedThreshold(warmupDemoterConfig.getMaxUsageThresholdPercentage());
     }
 
-    // returns false if resource allocation failed (treshold was reached)
+    // returns false if resource allocation failed (threshold was reached)
     public synchronized boolean tryAllocateNativeResourceForWarmup()
     {
         workerCapacityManager.updateCurrentUsage();
@@ -458,18 +449,19 @@ public class WarmupDemoterService
     void deleteImmediateObjects(List<TupleRank> tupleRanks)
             throws ExecutionException, InterruptedException
     {
-        logger.debug("start deleting %d immediate objects", tupleRanks.size());
-        long deletedObjectsCount = warpDeleteService.delete(tupleRanks, demoteContext, deleteEmptyRowGroups);
-        this.demoteContext.getStatsWarmupDemoter().adddead_objects_deleted(deletedObjectsCount);
+        logger.debug("catalog[%s]: start deleting %d immediate objects",
+                catalogName, tupleRanks.size());
+        long deletedObjectsCount = warpDeleteService.delete(tupleRanks, demoteContext.get(), deleteEmptyRowGroups);
+        this.demoteContext.get().getStatsWarmupDemoter().adddead_objects_deleted(deletedObjectsCount);
     }
 
     @VisibleForTesting
     void deleteFailedObjects(List<TupleRank> failedObjects)
             throws ExecutionException, InterruptedException
     {
-        logger.debug("start deleting %d failed objects", failedObjects.size());
-        long deletedObjectsCount = warpDeleteService.delete(failedObjects, demoteContext, deleteEmptyRowGroups);
-        WarmupDemoterStats statsWarmupDemoter = demoteContext.getStatsWarmupDemoter();
+        logger.debug("catalog[%s]: start deleting %d failed objects", catalogName, failedObjects.size());
+        long deletedObjectsCount = warpDeleteService.delete(failedObjects, demoteContext.get(), deleteEmptyRowGroups);
+        WarmupDemoterStats statsWarmupDemoter = demoteContext.get().getStatsWarmupDemoter();
         statsWarmupDemoter.addfailed_objects_deleted(deletedObjectsCount);
     }
 
@@ -477,21 +469,26 @@ public class WarmupDemoterService
     long deleteByTupleRank(long maxElementsToDemote, double maxPriorityToDemote)
             throws ExecutionException, InterruptedException
     {
-        if (demoteContext.getTupleRankList().isEmpty()) {
+        if (demoteContext.get().getTupleRankList().isEmpty()) {
             return 0;
         }
         int toIndex = 0;
         List<TupleRank> elementsToDemote = new ArrayList<>();
-        while (demoteContext.getTupleRankList().size() > toIndex && toIndex < maxElementsToDemote &&
-                demoteContext.getTupleRankList().get(toIndex).warmupProperties().priority() < maxPriorityToDemote) {
-            elementsToDemote.add(demoteContext.getTupleRankList().get(toIndex));
+        while (demoteContext.get().getTupleRankList().size() > toIndex && toIndex < maxElementsToDemote &&
+                demoteContext.get().getTupleRankList().get(toIndex).warmupProperties().priority() < maxPriorityToDemote) {
+            elementsToDemote.add(demoteContext.get().getTupleRankList().get(toIndex));
             toIndex++;
         }
-        long deletedObjectsCount = warpDeleteService.delete(elementsToDemote, demoteContext, deleteEmptyRowGroups);
-        demoteContext.getTupleRankList().removeAll(elementsToDemote);
-        demoteContext.getStatsWarmupDemoter().adddeleted_by_low_priority(deletedObjectsCount);
-        double highestPriorityDeleted = elementsToDemote.get(elementsToDemote.size() - 1).warmupProperties().priority();
-        highestPriority.set(highestPriorityDeleted);
+        logger.debug("catalog[%s]: start deleteByWarmupElement %d", catalogName, elementsToDemote.size());
+        long deletedObjectsCount = warpDeleteService.delete(elementsToDemote, demoteContext.get(), deleteEmptyRowGroups);
+        demoteContext.get().getTupleRankList().removeAll(elementsToDemote);
+        demoteContext.get().getStatsWarmupDemoter().adddeleted_by_low_priority(deletedObjectsCount);
+        double highestPriorityDeleted = elementsToDemote.getLast().warmupProperties().priority();
+
+        logger.debug("catalog[%s]: deleteByWarmupElement -> highestPriorityDeleted=%s",
+                catalogName, highestPriorityDeleted);
+
+        highestPriorityDemoted.set(highestPriorityDeleted);
         return deletedObjectsCount;
     }
 
@@ -502,30 +499,18 @@ public class WarmupDemoterService
 
     public AtomicDouble getDemoterHighestPriority()
     {
-        return highestPriority;
+        return highestPriorityDemoted;
     }
 
     @VisibleForTesting
     public void resetHighestPriority()
     {
-        this.highestPriority.set(0);
-    }
-
-    @VisibleForTesting
-    boolean trySetIsExecutingToTrue()
-    {
-        return this.isExecuting.compareAndSet(false, true);
+        highestPriorityDemoted.set(0);
     }
 
     public boolean isExecuting()
     {
-        return isExecuting.get();
-    }
-
-    @VisibleForTesting
-    public int getCurrentRunSequence()
-    {
-        return demoteContext == null ? FAILED_DEMOTE_SQUENCE : demoteContext.getDemoterSequence();
+        return demoteContext.get() != null;
     }
 
     public long getLastExecutionTime()
@@ -535,7 +520,7 @@ public class WarmupDemoterService
 
     public WarmupDemoterStats getCurrentRunStats()
     {
-        return demoteContext == null ? null : demoteContext.getStatsWarmupDemoter();
+        return demoteContext.get() == null ? null : demoteContext.get().getStatsWarmupDemoter();
     }
 
     public void setTupleFilters(List<TupleFilter> tupleFilters)
@@ -553,9 +538,9 @@ public class WarmupDemoterService
         this.forceDeleteFailedObjects = forceDeleteFailedObjects;
     }
 
-    public void setResetHigestPriority(boolean resetHigestPriority)
+    public void setResetHighestPriority(boolean resetHighestPriority)
     {
-        this.resetHigestPriority = resetHigestPriority;
+        this.resetHighestPriority = resetHighestPriority;
     }
 
     public void setDeleteEmptyRowGroups(boolean deleteEmptyRowGroups)
@@ -566,5 +551,10 @@ public class WarmupDemoterService
     public void setEnableDemote(boolean enableDemote)
     {
         this.enableDemote = enableDemote;
+    }
+
+    public double getEpsilon()
+    {
+        return warmupDemoterConfig.getEpsilon();
     }
 }
